[project]
name = "big-sky-yag"
version = "0.2.1"
description = "Python interface for a Big Sky YAG Laser."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "ograsdijk", email = "o.grasdijk@gmail.com" },
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Repository = "https://github.com/ograsdijk/Big-Sky-YAG"

[dependency-groups]
dev = [
    "build>=1.2.2.post1,<2",
    "mypy>=1.14.1,<1.15",
    "pytest>=8.3.5,<9",
    "ruff>=0.12.0",
    "twine>=6.2.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["big_sky_yag"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
files = ["big_sky_yag/device.py", "tests"]
strict = true

[[tool.mypy.overrides]]
module = "serial"
ignore_missing_imports = true
